# CobaltOld

./: .gitignore  .gitmodules  Cargo.toml  build.rs  readme.md
.github/workflows/: build.yml  rust.yml
examples/: pong.rs  resources.rs  sprite.rs  test.rs  test_game.rs
examples/assets/: log_cfg.yaml  readme
examples/assets/shaders/: fragment.glsl  vertex.glsl
src/: app.rs  assets.rs  camera.rs  ecs.rs  graphics.rs  input.rs  lib.rs  physics.rs  renderer.rs  resources.rs  scene.rs  system.rs  texture.rs  transform.rs  uniform.rs  window.rs
src/core/: mod.rs
src/core/graphics/: buffer.rs  image.rs  mod.rs  shader.rs  texture.rs
src/core/input/: mod.rs
src/core/utils/: logger.rs  mod.rs
src/dev_gui/: mod.rs
src/ecs/: mod.rs
src/physics_2d/: mod.rs  rigidbody.rs
src/renderer/: mod.rs  render_systems.rs
src/renderer/renderable/: mod.rs  primitives.rs
src/renderer/renderables/: mod.rs  quad.rs  rect.rs  test_triangle.rs
src/renderer/renderables/shaders/: quad.wgsl  rect.wgsl  test_triangle.wgsl
src/renderer/shaders/: sprite.frag  sprite.vert
src/renderer_2d/: mod.rs
src/renderer_2d/renderables/: mod.rs  rect.rs  sprite.rs  text.rs  translucent_sprite.rs
src/renderer_2d/renderables/shaders/: rect.wgsl  sprite.wgsl
src/resources/: mod.rs
