[package]
name = "cobalt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.13.1", features = ["derive"]}
log = "0.4.19"
stb_image = "0.2.5"
ultraviolet = {version = "0.9.2", features = ["serde", "mint", "f64", "bytemuck"]}
uuid = {version="1.5.0", features = ["serde", "v4"]}
wgpu = "0.18.0"
winit = "0.29.3"

[dev-dependencies]
chrono = "0.4.26"
criterion = "0.5.1"
log4rs = "1.2.0"
serde_yaml = "0.9.25"

