[package]
name = "cobalt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
anyhow = "1.0.75"
bytemuck = {version = "1.13.1", features = ["derive"]}
cgmath = "0.18.0"
hecs = "0.10.3"
image = "0.24.7"
log = "0.4.19"
pollster = "0.3.0"
stb_image = "0.2.5"
ultraviolet = {version = "0.9.2", features = ["serde", "mint", "f64", "bytemuck"]}
uuid = {version="1.5.0", features = ["serde", "v4"]}
wgpu = "0.18.0"
# Once wgpu bumps rwh and winit, we can remove the rwh_05 feature
# It is already bumped on git, but not on the last release
winit = {version = "0.29.3", features = ["rwh_05"]}

[dev-dependencies]
chrono = "0.4.26"
criterion = "0.5.1"
env_logger = "0.10.0"
