[package]
name = "cobalt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["renderer_2d", "physics_2d"]
renderer_2d = []
renderer_3d = []
physics_2d = []
physics_3d = []

[dependencies]
ahash = "0.8.6"
anyhow = "1.0.75"
bytemuck = {version = "1.13.1", features = ["derive"]}
cgmath = "0.18.0"
hecs = {version = "0.10.3", features = ["row-serialize"]}
image = "0.24.7"
log = "0.4.19"
pollster = "0.3.0"
serde = {version = "1.0.193", features = ["derive"]}
ultraviolet = {version = "0.9.2", features = ["serde", "mint", "f64", "bytemuck"]}
uuid = {version="1.5.0", features = ["serde", "v4"]}
wgpu = "0.18.0"
# Once wgpu bumps rwh and winit, we can remove the rwh_05 feature
# It is already bumped on git, but not on the last release
winit = {version = "0.29.3", features = ["rwh_05"]}

[dev-dependencies]
env_logger = "0.10.0"
